samples/_failures_safe/1761562981_a15dad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea0ac47d.c: In function ‘main’:
./samples/SAFE/__tmp_ea0ac47d.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
